Add notebooks and README files

--- a/analysis/data_prep/data_prep.ipynb
+++ b/analysis/data_prep/data_prep.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explore Data\n",
+    "# Data Preparation\n",
+    "\n",
     "This notebook explores and summarizes environmental and pathogen data for high and medium priority fungal pathogens in Northeastern Thailand. \n",
     "\n",
     "- Loads and processes abundance and metadata for both training and test datasets.\n",
@@ -12,7 +13,11 @@
     "- Identifies and saves sample IDs associated with each pathogen group. This data is used for training and test the decision tree models\n",
     "- Merges pathogen presence/absence with environmental properties for each sample.\n",
     "- Summarizes the number of samples per class (present/absent) for each pathogen group.\n",
-    "- Visualizes data distributions and relationships using pairplots and boxplots for environmental features, grouped by pathogen presence."
+    "- Visualizes data distributions and relationships using pairplots and boxplots for environmental features, grouped by pathogen presence.\n",
+    "\n",
+    "**Note**: \n",
+    "- Results from `match_taxonomy_to_key_names.ipynb` are required to run this notebook\n",
+    "- In order to run `analysis/model/automated_decision_tree.ipynb`, you need to run this notebook for both `data_set='training'` and `data_set='test'`"
    ]
   },
   {
@@ -26,18 +31,6 @@
     "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get path for folders\n",
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"../../..\"))\n",
-    "data_folder = os.path.join(project_root, \"data\")\n",
-    "results_folder = os.path.join(project_root, \"results\")"
    ]
   },
   {
@@ -55,8 +48,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get path for folders\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"../..\"))\n",
+    "\n",
+    "# folders\n",
+    "data_folder = os.path.join(project_root, \"data\")\n",
+    "\n",
+    "results_folder = os.path.join(project_root, \"results\")\n",
+    "os.makedirs(results_folder, exist_ok=True)\n",
+    "\n",
+    "group_names_folder = os.path.join(results_folder, \"group_names\")\n",
+    "os.makedirs(group_names_folder, exist_ok=True)\n",
+    "\n",
+    "cross_plots_folder = os.path.join(results_folder, \"cross_plots\")\n",
+    "os.makedirs(cross_plots_folder, exist_ok=True)\n",
+    "\n",
+    "box_plots_folder = os.path.join(results_folder, \"box_plots\")\n",
+    "os.makedirs(box_plots_folder, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# data set to use\n",
-    "data_set = \"training\"  # options: \"training\" or \"test\""
+    "data_set = \"test\"  # options: \"training\" or \"test\""
    ]
   },
   {
@@ -256,20 +274,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for group_name in all_group_names:\n",
-    "    if group_name in high_priority_group_names:\n",
-    "        df = pd.read_csv(f\"{data_folder}/high_priority/{group_name}_sampleIDs_{data_set}_data.csv\")\n",
+    "all_possible_group_names = ['Acremonium spp.', 'Candida tropicalis',\n",
+    "       'Curvularia lunata', 'Falciformispora senegalensis', 'Fusarium spp.',\n",
+    "       'Lichtheimia spp.', 'Mucor spp.', 'Rhizopus spp.', 'Scedosporium spp.',\n",
+    "       'Talaromyces marneffei']\n",
+    "\n",
+    "for group_name in all_possible_group_names:\n",
+    "    if group_name in all_group_names:\n",
+    "        if group_name in high_priority_group_names:\n",
+    "            df = pd.read_csv(f\"{data_folder}/high_priority/{group_name}_sampleIDs_{data_set}_data.csv\")\n",
+    "        else:\n",
+    "            df = pd.read_csv(f\"{data_folder}/medium_priority/{group_name}_sampleIDs_{data_set}_data.csv\")\n",
+    "        if data_set == 'training':\n",
+    "            SampleIDs = df['SampleID'].to_list()\n",
+    "        elif data_set == 'test':\n",
+    "            SampleIDs = df['OTU ID'].to_list()\n",
+    "        SampleIDs = [x.replace(\"-\",\"_\") for x in SampleIDs]\n",
+    "\n",
+    "        properties_df[group_name] = properties_df['SampleID'].apply(lambda x: 1 if x in SampleIDs else 0)\n",
+    "\n",
+    "        # Sanity check\n",
+    "        if properties_df[properties_df[group_name] == 1].shape[0] != len(SampleIDs):\n",
+    "            print(f\"Error: {group_name} sampleIDs do not match\")\n",
     "    else:\n",
-    "        df = pd.read_csv(f\"{data_folder}/medium_priority/{group_name}_sampleIDs_{data_set}_data.csv\")\n",
-    "\n",
-    "    SampleIDs = df.SampleID.to_list()\n",
-    "    SampleIDs = [x.replace(\"-\",\"_\") for x in SampleIDs]\n",
-    "\n",
-    "    properties_df[group_name] = properties_df['SampleID'].apply(lambda x: 1 if x in SampleIDs else 0)\n",
-    "\n",
-    "    # Sanity check\n",
-    "    if properties_df[properties_df[group_name] == 1].shape[0] != len(SampleIDs):\n",
-    "        print(f\"Error: {group_name} sampleIDs do not match\")"
+    "        properties_df[group_name] = 0"
    ]
   },
   {
@@ -383,7 +411,7 @@
     "                          y=1.02)  # Adjust y to position the title above the plot\n",
     "\n",
     "    # Save the plot to a file\n",
-    "    pairplot.savefig(f\"{results_folder}/cross_plots/{group_name}_pairplot_{data_set}_data.png\")\n",
+    "    pairplot.savefig(f\"{cross_plots_folder}/{group_name}_pairplot_{data_set}_data.png\")\n",
     "\n",
     "    # Close the plot to free memory\n",
     "    plt.close(pairplot.fig)"
@@ -438,7 +466,7 @@
     "    plt.tight_layout(rect=[0, 0, 1, 0.96])  # Adjust rect to leave space for the suptitle\n",
     "\n",
     "    # Save the figure to a file\n",
-    "    output_path = f\"{results_folder}/box_plots/{group_name}_boxplot_{data_set}_data.png\"\n",
+    "    output_path = f\"{box_plots_folder}/{group_name}_boxplot_{data_set}_data.png\"\n",
     "    plt.savefig(output_path)\n",
     "    plt.close(fig)  # Close the figure to free memory\n",
     "\n",
