--- a/analysis/data_prep/match_taxonomy_to_key_names.ipynb
+++ b/analysis/data_prep/match_taxonomy_to_key_names.ipynb
@@ -11,12 +11,14 @@
     "- Defines critical, high, and medium priority fungal groups based on WHO guidelines.\n",
     "- Matches species in the dataset to these priority groups.\n",
     "- Saves lists of matched sample names and their classification groups for downstream analysis.\n",
-    "- Provides a framework for tracking the presence of priority fungal pathogens in environmental samples."
+    "- Provides a framework for tracking the presence of priority fungal pathogens in environmental samples.\n",
+    "\n",
+    "**Note**: In order to run `analysis/model/automated_decision_tree.ipynb`, you need to run this notebook for both `data_set='training'` and `data_set='test'`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get path for data folder\n",
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"../../..\"))\n",
-    "data_folder = os.path.join(project_root, \"data\")"
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"../..\"))\n",
+    "data_folder = os.path.join(project_root, \"data\")\n",
+    "os.makedirs(data_folder, exist_ok=True)\n",
+    "\n",
+    "critical_priority_folder = os.path.join(data_folder, \"critical_priority\")\n",
+    "os.makedirs(critical_priority_folder, exist_ok=True)\n",
+    "\n",
+    "high_priority_folder = os.path.join(data_folder, \"high_priority\")\n",
+    "os.makedirs(high_priority_folder, exist_ok=True)\n",
+    "\n",
+    "medium_priority_folder = os.path.join(data_folder, \"medium_priority\")\n",
+    "os.makedirs(medium_priority_folder, exist_ok=True)"
    ]
   },
   {
@@ -259,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"WHO_fungal_priority_pathogens_list.json\", \"w\") as file:\n",
+    "with open(f\"{data_folder}/WHO_fungal_priority_pathogens_list.json\", \"w\") as file:\n",
     "    json.dump(priority_list, file)"
    ]
   },
@@ -361,7 +373,9 @@
    "source": [
     "# Save the group names to a file\n",
     "critical_priority_samples_groups = list(critical_priority_samples_df.classification_group.unique())\n",
-    "with open(f\"{data_folder}/critical_priority/critical_priority_samples_groups_{data_set}_data\", 'w') as file:\n",
+    "output_dir = os.path.join(data_folder, \"critical_priority\")\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "with open(f\"{critical_priority_folder}/critical_priority_samples_groups_{data_set}_data\", 'w') as file:\n",
     "    file.write('\\n'.join(critical_priority_samples_groups))\n"
    ]
   },
@@ -422,7 +436,7 @@
    "source": [
     "# Save the group names to a file\n",
     "high_priority_samples_groups = list(high_priority_samples_df.classification_group.unique())\n",
-    "with open(f\"{data_folder}/high_priority/high_priority_samples_groups_{data_set}_data\", 'w') as file:\n",
+    "with open(f\"{high_priority_folder}/high_priority_samples_groups_{data_set}_data\", 'w') as file:\n",
     "    file.write('\\n'.join(high_priority_samples_groups))\n"
    ]
   },
@@ -483,7 +497,7 @@
    "source": [
     "# Save the group names to a file\n",
     "medium_priority_samples_groups = list(medium_priority_samples_df.classification_group.unique())\n",
-    "with open(f\"{data_folder}/medium_priority/medium_priority_samples_groups_{data_set}_data\", 'w') as file:\n",
+    "with open(f\"{medium_priority_folder}/medium_priority_samples_groups_{data_set}_data\", 'w') as file:\n",
     "    file.write('\\n'.join(medium_priority_samples_groups))\n"
    ]
   }
