--- a/analysis/model/automated_decision_tree.ipynb
+++ b/analysis/model/automated_decision_tree.ipynb
@@ -6,32 +6,46 @@
    "metadata": {},
    "source": [
     "## Automated running decision tree\n",
-    "- Experiment variables\n",
-    "\t- feature sets:\n",
-    "\t\t- feature set1: all features\n",
-    "\t\t- feature set2: all features - plant tyeps\n",
-    "\t\t- feature set3: all features - plant types - soil temp\n",
-    "\t\t- feature set4: all features - soil temp\n",
-    "\t- model parameters\n",
-    "\t\t- DecisionTreeClassifier(random_state=42)\n",
-    "\t\t- DecisionTreeClassifier(random_state=42, max_depth =\n",
-    "\t\t  3)  \n",
-    "- Output includes\n",
-    "\t- WHO FPPL (species/pathogen)\n",
-    "\t- Feature\n",
-    "\t- Condition (for only non-existing species)\n",
-    "\t- Training metrics\n",
-    "\t\t- accuracy\n",
-    "\t\t- precision\n",
-    "\t\t- recall\n",
-    "\t- Test data\n",
-    "\t\t- number of samples that matched condition\n",
-    "\t\t- accuracy (based on only samples that matched conditions)"
+    "\n",
+    "This notebook automates the training, evaluation, and interpretation of decision tree models for predicting the presence of high and medium priority fungal pathogens in environmental samples. \n",
+    "\n",
+    "- Loads and preprocesses training and test datasets, including one-hot encoding of categorical variables.\n",
+    "- Defines multiple feature sets and model configurations for systematic experimentation.\n",
+    "- Trains decision tree classifiers for each pathogen group and feature set.\n",
+    "- Visualizes and saves decision tree structures.\n",
+    "- Extracts and evaluates decision rules (paths) with perfect classification (gini = 0) on the training data.\n",
+    "- Applies these rules to the test data to assess their predictive performance.\n",
+    "- Saves detailed metrics and results, including per-pathogen Excel reports, for downstream analysis and interpretation.\n",
+    "\n",
+    "**Note**: Results from `analysis/data_prep/match_taxonomy_to_key_names.ipynb` and `analysis/data_prep/data_prep.ipynb` are required to run this notebook\n",
+    "\n",
+    "### Experiment variables\n",
+    "- feature sets:\n",
+    "\t- feature set1: all features\n",
+    "\t- feature set2: all features - plant tyeps\n",
+    "\t- feature set3: all features - plant types - soil temp\n",
+    "\t- feature set4: all features - soil temp\n",
+    "- model parameters\n",
+    "\t- DecisionTreeClassifier(random_state=42)\n",
+    "\t- DecisionTreeClassifier(random_state=42, max_depth =\n",
+    "\t\t3)  \n",
+    "\n",
+    "### Output includes\n",
+    "- WHO FPPL (species/pathogen)\n",
+    "- Feature\n",
+    "- Condition (for only non-existing species)\n",
+    "- Training metrics\n",
+    "\t- accuracy\n",
+    "\t- precision\n",
+    "\t- recall\n",
+    "- Test data\n",
+    "\t- number of samples that matched condition\n",
+    "\t- accuracy (based on only samples that matched conditions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cf34ab64",
    "metadata": {},
    "outputs": [],
@@ -42,7 +56,6 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
-    "import importlib\n",
     "\n",
     "import sys\n",
     "sys.path.append('../scripts')\n",
@@ -59,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8ca9d3a7",
    "metadata": {},
    "outputs": [],
@@ -74,7 +87,22 @@
     "            cond\n",
     "        )\n",
     "        rounded_conditions.append(rounded)\n",
-    "    return rounded_conditions"
+    "    return rounded_conditions\n",
+    "\n",
+    "# Refine formatting to ensure genus and species remain separated by a space inside italics\n",
+    "def format_pathogen_label(name):\n",
+    "    if \"spp.\" in name:\n",
+    "        parts = name.split(\"spp.\")\n",
+    "        genus = parts[0].strip().replace(\" \", r\"\\ \")  # preserve spaces\n",
+    "        return rf\"$\\it{{{genus}}}$ spp.{parts[1]}\"\n",
+    "    else:\n",
+    "        if \"(\" in name:\n",
+    "            genus_species, suffix = name.split(\"(\", 1)\n",
+    "            genus_species = genus_species.strip().replace(\" \", r\"\\ \")\n",
+    "            return rf\"$\\it{{{genus_species}}}$ ({suffix.strip()}\"\n",
+    "        else:\n",
+    "            genus_species = name.strip().replace(\" \", r\"\\ \")\n",
+    "            return rf\"$\\it{{{genus_species}}}$\""
    ]
   },
   {
@@ -93,9 +121,15 @@
    "outputs": [],
    "source": [
     "# get path for folders\n",
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"../../..\"))\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"../..\"))\n",
     "data_folder = os.path.join(project_root, \"data\")\n",
-    "results_folder = os.path.join(project_root, \"results\")"
+    "results_folder = os.path.join(project_root, \"results\")\n",
+    "\n",
+    "decision_trees_folder = os.path.join(results_folder, \"decision_trees\")\n",
+    "os.makedirs(decision_trees_folder, exist_ok=True)\n",
+    "\n",
+    "decision_trees_metrics_folder = os.path.join(decision_trees_folder, \"metrics\")\n",
+    "os.makedirs(decision_trees_metrics_folder, exist_ok=True)"
    ]
   },
   {
@@ -133,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e597916b",
    "metadata": {},
    "outputs": [],
@@ -158,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(f'{data_folder}/DroughtITS_mapping_w_labels_test_data.csv.csv')\n",
+    "test_df = pd.read_csv(f'{data_folder}/DroughtITS_mapping_w_labels_test_data.csv')\n",
     "test_df['nitrogen'] = test_df['n_nitrate']"
    ]
   },
@@ -200,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "74335472",
    "metadata": {},
    "outputs": [],
@@ -227,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "15b2b827",
    "metadata": {},
    "outputs": [],
@@ -238,133 +272,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17b98279",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a1d5b878",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0. Running for group: Acremonium spp.\n",
-      "Running for feature set: features_set1\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set2\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set3\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set4\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "1. Running for group: Candida tropicalis\n",
-      "Running for feature set: features_set1\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set2\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set3\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set4\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "2. Running for group: Curvularia lunata\n",
-      "Running for feature set: features_set1\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set2\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set3\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set4\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "3. Running for group: Falciformispora senegalensis\n",
-      "Running for feature set: features_set1\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set2\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set3\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set4\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "4. Running for group: Lichtheimia spp.\n",
-      "Running for feature set: features_set1\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set2\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set3\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set4\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "5. Running for group: Mucor spp.\n",
-      "Running for feature set: features_set1\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set2\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set3\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set4\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "6. Running for group: Rhizopus spp.\n",
-      "Running for feature set: features_set1\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set2\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set3\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set4\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "7. Running for group: Scedosporium spp.\n",
-      "Running for feature set: features_set1\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set2\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set3\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set4\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "8. Running for group: Talaromyces marneffei\n",
-      "Running for feature set: features_set1\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set2\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set3\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n",
-      "Running for feature set: features_set4\n",
-      "Running for model: DecisionTreeClassifier\n",
-      "Running for model: DecisionTreeClassifier_max_depth_3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output_metrics = []\n",
     "for idx, group_name in enumerate(group_names):\n",
@@ -465,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_metrics_df.to_excel(f\"{results_folder}/decision_trees/metrics/decision_tree_paths_metrics.xlsx\", index=False)"
+    "output_metrics_df.to_excel(f\"{decision_trees_metrics_folder}/decision_tree_paths_metrics.xlsx\", index=False)"
    ]
   },
   {
@@ -475,11 +395,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter(f\"{results_folder}/decision_trees/metrics/decision_tree_paths_metrics_by_group.xlsx\") as writer:\n",
+    "with pd.ExcelWriter(f\"{decision_trees_metrics_folder}/decision_tree_paths_metrics_by_group.xlsx\") as writer:\n",
     "    for group, df_group in output_metrics_df.groupby(\"group_name\"):\n",
     "        # Excel sheet names can't be longer than 31 characters\n",
     "        sheet_name = group[:31]\n",
     "        df_group.to_excel(writer, sheet_name=sheet_name, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc2e49d4",
+   "metadata": {},
+   "source": [
+    "## Precision and Recall Plots\n",
+    "- for selected models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e58b5f16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# selected models for precision and recall plots\n",
+    "data = {\n",
+    "    \"Pathogen\": [\n",
+    "        \"Acremonium spp.\", \"Candida tropicalis (1)\", \"Candida tropicalis (2)\",\n",
+    "        \"Curvularia lunata (1)\", \"Curvularia lunata (2)\", \"Falciformispora senegalensis\",\n",
+    "        \"Lichtheimia spp.\", \"Mucor spp.\", \"Rhizopus spp.\", \"Scedosporium spp.\",\n",
+    "        \"Talaromyces marneffei\"\n",
+    "    ],\n",
+    "    \"Training Precision\": [1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00],\n",
+    "    \"Training Recall\": [0.33, 0.46, 0.46, 0.62, 0.54, 0.74, 0.95, 0.90, 0.24, 0.12, 0.40],\n",
+    "    \"Test Precision\": [0.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 0.83, 0.00, 1.00],\n",
+    "    \"Test Recall\": [0.00, 0.42, 0.75, 0.50, 0.50, 1.00, 0.58, 1.00, 0.63, 0.00, 1.00]\n",
+    "}\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ada9f440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply formatting to pathogen names again\n",
+    "formatted_labels = [format_pathogen_label(name) for name in df[\"Pathogen\"]]\n",
+    "\n",
+    "# Plot again with corrected formatting\n",
+    "fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "\n",
+    "bar_width = 0.35\n",
+    "x = range(len(df))\n",
+    "\n",
+    "# Training metrics (blue with black edge)\n",
+    "ax.bar([i - bar_width/2 for i in x], df[\"Training Precision\"], width=bar_width/2,\n",
+    "       label=\"Training Precision\", color=\"#0072B2\", edgecolor=\"black\")\n",
+    "ax.bar([i for i in x], df[\"Training Recall\"], width=bar_width/2,\n",
+    "       label=\"Training Recall\", color=\"#0072B2\", hatch=\"//\", edgecolor=\"black\")\n",
+    "\n",
+    "# Test metrics (orange with black edge)\n",
+    "ax.bar([i + bar_width/2 for i in x], df[\"Test Precision\"], width=bar_width/2,\n",
+    "       label=\"Test Precision\", color=\"#D55E00\", edgecolor=\"black\")\n",
+    "ax.bar([i + bar_width for i in x], df[\"Test Recall\"], width=bar_width/2,\n",
+    "       label=\"Test Recall\", color=\"#D55E00\", hatch=\"//\", edgecolor=\"black\")\n",
+    "\n",
+    "# Formatting\n",
+    "ax.set_xticks(x)\n",
+    "ax.set_xticklabels(formatted_labels, rotation=45, ha=\"right\")\n",
+    "ax.set_ylabel(\"Value\")\n",
+    "ax.set_xlabel(\"Pathogen Predicted Absence Condition\")\n",
+    "ax.set_ylim(0, 1.1)\n",
+    "ax.set_title(\"Training and Test Precision and Recall of Pathogen Absence Prediction Models\", pad=20, fontsize=16)\n",
+    "\n",
+    "ax.legend(ncol=1, loc=\"center left\", bbox_to_anchor=(1.02, 0.5), frameon=True)\n",
+    "\n",
+    "# Save figure at 1000 dpi, full page width (7480 pixels)\n",
+    "plt.savefig(\n",
+    "    f\"{results_folder}/train_test_precision_recall.png\",\n",
+    "    dpi=1000,\n",
+    "    bbox_inches='tight',\n",
+    "    format='png'\n",
+    ")\n",
+    "plt.show()\n"
    ]
   }
  ],
