--- a/analysis/data_prep/data_prep.ipynb
+++ b/analysis/data_prep/data_prep.ipynb
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "# data set to use\n",
-    "data_set = \"test\"  # options: \"training\" or \"test\""
+    "data_set = \"training\"  # options: \"training\" or \"test\""
    ]
   },
   {
